   associated channel and then clicking Refresh.
 - Added an option of using 'Last-Spoke' nick completion order in Settings >
   Input Box.
 - The /QUERY command now has -nofocus arg, which scripts might find useful.
 - You can now /set gui_url_mod 0, to allow left-clicking URLs (default is
   4, for CTRL).
 - XChat will now respect gtk-button-images=0 set in ~/.gtkrc-2.0.
 - Python on Win32: Fixed restricted mode errors [1512076].
 - Plugin API:
  * The second args to xchat_list_int and xchat_list_str can now be NULL as
    a shortcut to "channels" list for current context only.
  * Added bits 6-8 to the field "flags" in the "channels" list.
 - Perl (Lian Wan Situ)
  * Fixed a bug with Xchat::print that prevents printing out a
    single 0(Lian Wan Situ)
  * Fixed a bug in Xchat::get_prefs that was clobbering the stack(Sergio Luis)
  * Allow scripts that use a non-existent function for the shutdown callback
    to be unloaded(Lian Wan Situ)
  * Added check in set_context for undef
  * Added the fields from get_list "channels" for the current context to the
    result of context_info


----------------------------------------------------------------------
 2.6.4 - 08/Jun/2006
----------------------------------------------------------------------

 - Updated translations (de, el, es, gl, hu, nl, sv, vi, zh_TW).
 - Fixed opening a irc:// URL via "xchat -a --url=abc123" command while
   "Skip serverlist on startup" is off. This fix is only relevant when
   opening an initial instance of xchat (i.e not via dbus).
 - Fixed the tree layout "flashing" (redrawing slowly) after you
   switched to tabs and back to tree.
 - Fixed plugin/script get_list("users") causing a critical GDK warning
   when not executed from the front-most tab.
 - Added spelling support in the input-box via GTKSpell.
 - Improved the error reporting when connecting through a Socks proxy.
 - DCC file transfers via http/socks45/wingate proxy is now supported
   (Damjan Jovanovic & me).